Migrate SkillDetectServer to Java 8 / Boot 2.7 / MyBatis-Plus / MySQL