@@ -4,9 +4,10 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.HexFormat;
+import java.util.stream.Stream;
 
 import org.springframework.stereotype.Service;
 
@@ -15,6 +16,8 @@ import com.skilldetect.server.config.ScanProperties;
 
 @Service
 public class FileStorageService {
+
+    private static final char[] HEX = "0123456789abcdef".toCharArray();
 
     private final ScanProperties properties;
 
@@ -25,7 +28,7 @@ public class FileStorageService {
     /** Save an uploaded zip to <baseDir>/<taskNo>/input.zip and return the path. */
     public String saveUpload(String taskNo, byte[] bytes) {
         try {
-            Path dir = Path.of(properties.getStorage().getBaseDir(), taskNo);
+            Path dir = Paths.get(properties.getStorage().getBaseDir(), taskNo);
             Files.createDirectories(dir);
             Path file = dir.resolve("input.zip");
             Files.write(file, bytes);
@@ -38,10 +41,10 @@ public class FileStorageService {
     /** Write a rendered report and return the stored path. */
     public String writeReport(String taskNo, String content, String extension) {
         try {
-            Path dir = Path.of(properties.getStorage().getBaseDir(), taskNo);
+            Path dir = Paths.get(properties.getStorage().getBaseDir(), taskNo);
             Files.createDirectories(dir);
             Path file = dir.resolve("report." + extension);
-            Files.writeString(file, content == null ? "" : content, StandardCharsets.UTF_8);
+            Files.write(file, (content == null ? "" : content).getBytes(StandardCharsets.UTF_8));
             return file.toString();
         } catch (IOException ex) {
             throw new BusinessException(50011, "写入报告失败: " + ex.getMessage());
@@ -50,11 +53,11 @@ public class FileStorageService {
 
     public void deleteDir(String taskNo) {
         try {
-            Path dir = Path.of(properties.getStorage().getBaseDir(), taskNo);
+            Path dir = Paths.get(properties.getStorage().getBaseDir(), taskNo);
             if (!Files.exists(dir)) {
                 return;
             }
-            try (var stream = Files.walk(dir)) {
+            try (Stream<Path> stream = Files.walk(dir)) {
                 stream.sorted((a, b) -> b.getNameCount() - a.getNameCount()).forEach(path -> {
                     try {
                         Files.deleteIfExists(path);
@@ -70,7 +73,7 @@ public class FileStorageService {
 
     public String readReport(String path) {
         try {
-            return Files.readString(Path.of(path), StandardCharsets.UTF_8);
+            return new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
         } catch (IOException ex) {
             throw new BusinessException(40403, "报告不存在或不可读");
         }
@@ -79,9 +82,19 @@ public class FileStorageService {
     public static String sha256(byte[] bytes) {
         try {
             MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            return HexFormat.of().formatHex(digest.digest(bytes));
+            return toHex(digest.digest(bytes));
         } catch (NoSuchAlgorithmException ex) {
             throw new IllegalStateException("SHA-256 unavailable", ex);
         }
+    }
+
+    private static String toHex(byte[] bytes) {
+        char[] chars = new char[bytes.length * 2];
+        for (int i = 0; i < bytes.length; i++) {
+            int v = bytes[i] & 0xFF;
+            chars[i * 2] = HEX[v >>> 4];
+            chars[i * 2 + 1] = HEX[v & 0x0F];
+        }
+        return new String(chars);
     }
 }
