@@ -1,68 +1,77 @@
 package com.skilldetect.server.scan.service;
 
-import java.time.Instant;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import org.springframework.stereotype.Service;
 import org.springframework.http.HttpStatus;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.skilldetect.server.common.BusinessException;
 import com.skilldetect.server.config.ScanProperties;
 import com.skilldetect.server.engine.EngineScanResponse;
 import com.skilldetect.server.scan.domain.ScanFindingEntity;
 import com.skilldetect.server.scan.domain.ScanStatus;
 import com.skilldetect.server.scan.domain.ScanTaskEntity;
-import com.skilldetect.server.scan.repository.ScanFindingRepository;
-import com.skilldetect.server.scan.repository.ScanTaskRepository;
+import com.skilldetect.server.scan.mapper.ScanFindingMapper;
+import com.skilldetect.server.scan.mapper.ScanTaskMapper;
 
 @Service
 public class ScanStateService {
 
-    private final ScanTaskRepository taskRepo;
-    private final ScanFindingRepository findingRepo;
+    private final ScanTaskMapper taskMapper;
+    private final ScanFindingMapper findingMapper;
     private final ScanProperties properties;
 
-    public ScanStateService(ScanTaskRepository taskRepo,
-                            ScanFindingRepository findingRepo,
+    public ScanStateService(ScanTaskMapper taskMapper,
+                            ScanFindingMapper findingMapper,
                             ScanProperties properties) {
-        this.taskRepo = taskRepo;
-        this.findingRepo = findingRepo;
+        this.taskMapper = taskMapper;
+        this.findingMapper = findingMapper;
         this.properties = properties;
     }
 
     @Transactional
     public boolean claim(String taskNo) {
-        return taskRepo.claimForDispatch(taskNo, Instant.now()) > 0;
+        LambdaUpdateWrapper<ScanTaskEntity> update = new LambdaUpdateWrapper<>();
+        update.eq(ScanTaskEntity::getTaskNo, taskNo)
+                .eq(ScanTaskEntity::getStatus, ScanStatus.QUEUED.name())
+                .set(ScanTaskEntity::getStatus, ScanStatus.RUNNING.name())
+                .set(ScanTaskEntity::getStartedAt, LocalDateTime.now());
+        return taskMapper.update(null, update) > 0;
     }
 
     @Transactional
     public void markCancelled(String taskNo) {
-        taskRepo.findByTaskNo(taskNo).ifPresent(task -> {
+        findByTaskNo(taskNo).ifPresent(task -> {
             task.setStatus(ScanStatus.CANCELED.name());
-            task.setFinishedAt(Instant.now());
-            taskRepo.save(task);
+            task.setFinishedAt(LocalDateTime.now());
+            taskMapper.updateById(task);
         });
     }
 
     @Transactional
     public void markFailed(String taskNo, String errorCode, String errorMsg) {
-        taskRepo.findByTaskNo(taskNo).ifPresent(task -> {
+        findByTaskNo(taskNo).ifPresent(task -> {
             if (!ScanStatus.RUNNING.name().equals(task.getStatus())) {
                 return;
             }
             task.setStatus(ScanStatus.FAILED.name());
             task.setErrorCode(errorCode);
             task.setErrorMsg(errorMsg);
-            task.setFinishedAt(Instant.now());
-            taskRepo.save(task);
+            task.setFinishedAt(LocalDateTime.now());
+            taskMapper.updateById(task);
         });
     }
 
     @Transactional
     public ScanTaskEntity saveResult(String taskNo, EngineScanResponse result, String reportPath) {
-        ScanTaskEntity task = taskRepo.findByTaskNo(taskNo).orElseThrow();
+        ScanTaskEntity task = findByTaskNo(taskNo).orElseThrow(
+                () -> new BusinessException(HttpStatus.NOT_FOUND, 40401, "任务不存在: " + taskNo));
         if (!ScanStatus.RUNNING.name().equals(task.getStatus())) {
             return task; // cancelled or timed out by reconciler; ignore late result
         }
@@ -90,65 +99,81 @@ public class ScanStateService {
         task.setPass(pass);
         task.setReportPath(reportPath);
         task.setStatus(ScanStatus.SUCCEEDED.name());
-        task.setFinishedAt(Instant.now());
-        return taskRepo.save(task);
+        task.setFinishedAt(LocalDateTime.now());
+        taskMapper.updateById(task);
+        return task;
     }
 
     @Transactional
     public ScanTaskEntity saveNewTask(ScanTaskEntity task) {
-        return taskRepo.save(task);
+        taskMapper.insert(task);
+        return task;
     }
+
     @Transactional
     public void resetForRetry(String taskNo) {
-        ScanTaskEntity task = taskRepo.findByTaskNo(taskNo).orElseThrow();
+        ScanTaskEntity task = findByTaskNo(taskNo).orElseThrow(
+                () -> new BusinessException(HttpStatus.NOT_FOUND, 40401, "任务不存在: " + taskNo));
         if (!ScanStatus.FAILED.name().equals(task.getStatus())
                 && !ScanStatus.CANCELED.name().equals(task.getStatus())) {
             throw new BusinessException(HttpStatus.CONFLICT, 40902, "仅 FAILED/CANCELED 任务可重试");
         }
-        task.setStatus(ScanStatus.QUEUED.name());
-        task.setRiskScore(null);
-        task.setSeverity(null);
-        task.setRecommendation(null);
-        task.setSafeToInstall(null);
-        task.setPass(null);
-        task.setExecutionSuccessful(null);
-        task.setAnalysisComplete(null);
-        task.setEntirelyUninspectedFiles(null);
-        task.setLlmUsed(null);
-        task.setScanMode(null);
-        task.setEngineScanId(null);
-        task.setErrorCode(null);
-        task.setErrorMsg(null);
-        task.setStartedAt(null);
-        task.setFinishedAt(null);
-        task.setRetryCount(task.getRetryCount() + 1);
-        taskRepo.save(task);
+        LambdaUpdateWrapper<ScanTaskEntity> update = new LambdaUpdateWrapper<>();
+        update.eq(ScanTaskEntity::getTaskNo, taskNo)
+                .set(ScanTaskEntity::getStatus, ScanStatus.QUEUED.name())
+                .set(ScanTaskEntity::getRiskScore, null)
+                .set(ScanTaskEntity::getSeverity, null)
+                .set(ScanTaskEntity::getRecommendation, null)
+                .set(ScanTaskEntity::getSafeToInstall, null)
+                .set(ScanTaskEntity::getPass, null)
+                .set(ScanTaskEntity::getExecutionSuccessful, null)
+                .set(ScanTaskEntity::getAnalysisComplete, null)
+                .set(ScanTaskEntity::getEntirelyUninspectedFiles, null)
+                .set(ScanTaskEntity::getLlmUsed, null)
+                .set(ScanTaskEntity::getScanMode, null)
+                .set(ScanTaskEntity::getEngineScanId, null)
+                .set(ScanTaskEntity::getErrorCode, null)
+                .set(ScanTaskEntity::getErrorMsg, null)
+                .set(ScanTaskEntity::getStartedAt, null)
+                .set(ScanTaskEntity::getFinishedAt, null)
+                .set(ScanTaskEntity::getRetryCount, task.getRetryCount() + 1);
+        taskMapper.update(null, update);
     }
-
 
     @Transactional
     public void saveFindings(Long taskId, List<ScanFindingEntity> findings) {
-        if (findings != null && !findings.isEmpty()) {
-            findingRepo.saveAll(findings);
+        if (findings != null) {
+            for (ScanFindingEntity finding : findings) {
+                finding.setTaskId(taskId);
+                findingMapper.insert(finding);
+            }
         }
     }
 
+    private Optional<ScanTaskEntity> findByTaskNo(String taskNo) {
+        return Optional.ofNullable(taskMapper.selectOne(
+                new LambdaQueryWrapper<ScanTaskEntity>().eq(ScanTaskEntity::getTaskNo, taskNo)));
+    }
+
     private static Boolean asBoolean(Object value) {
-        if (value instanceof Boolean b) {
-            return b;
+        if (value instanceof Boolean) {
+            return (Boolean) value;
         }
-        if (value instanceof String s) {
-            return Boolean.parseBoolean(s);
+        if (value instanceof String) {
+            return Boolean.parseBoolean((String) value);
         }
         return null;
     }
 
     private static Integer asInt(Object value) {
-        if (value instanceof Number n) {
-            return n.intValue();
+        if (value instanceof Number) {
+            return ((Number) value).intValue();
         }
-        if (value instanceof String s && !s.isBlank()) {
-            return Integer.parseInt(s);
+        if (value instanceof String) {
+            String s = (String) value;
+            if (s != null && !s.trim().isEmpty()) {
+                return Integer.parseInt(s);
+            }
         }
         return null;
     }
